# harry-ai

./: .env.example  .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt
docs/: generate_screenshots.py
harry/: __init__.py  brain.py  cli.py  config.py  enroll.py  greetings.py  memory.py  onboard.py  persona.py  server.py
harry/agents/: __init__.py  base.py  code_agent.py  computer_agent.py  conversation_agent.py  orchestrator.py  system_agent.py  time_agent.py  weather_agent.py
harry/brain/: __init__.py  claude_code.py  openai_compat.py  openrouter.py
harry/skills/: __init__.py  agent.py  handlers.py  registry.py
harry/voice/: __init__.py  listener.py  speaker.py  speaker_id.py
scripts/: build-app.sh  harry_launcher.py  make-dmg-bg.py  make-icon.py
tests/: test_orchestrator.py  test_skills.py
webapp/: app.css  app.jsx  greetings-bilingual.js  greetings-ta.js  greetings.js  harry-bridge.js  index.html  orb.jsx  settings-patch.jsx
