[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harry-jarvis"
version = "0.2.0"
description = "Voice-only agentic AI — JARVIS / FRIDAY-style, with a Hermes-style orchestrator, 98-skill catalogue, computer-use agent, and a pluggable LLM brain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rudhran B.", email = "csrudhran@gmail.com" }]
keywords = ["voice", "assistant", "agentic", "jarvis", "hermes", "claude", "deepseek", "openrouter"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "SpeechRecognition>=3.10.0",
  "pyttsx3>=2.90",
  "PyAudio>=0.2.13",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "requests>=2.31.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
speakerid = ["resemblyzer>=0.1.4", "sounddevice>=0.4.6", "soundfile>=0.12.1"]

[project.scripts]
harry = "harry.cli:main"
harry-server = "harry.server:main"
harry-onboard = "harry.onboard:main"
harry-enroll = "harry.enroll:main"

[project.urls]
Homepage = "https://github.com/rudhrancodes-dev/harry-ai"
Repository = "https://github.com/rudhrancodes-dev/harry-ai"

[tool.setuptools.packages.find]
include = ["harry*"]

[tool.setuptools.package-data]
harry = ["../webapp/*", "../webapp/screenshots/*"]
